objects/TEMarketing__me_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Marketing Enablement managed package - including contact role validation, mql object, revenue attribution, marketing sourced opps</description>
    <fields>
        <fullName>TEMarketing__Distributor_Followup_Days_Hot__c</fullName>
        <defaultValue>2</defaultValue>
        <description>The number of days (excluding weekends) that a distributor has to action a hot MQL</description>
        <inlineHelpText>The number of days (excluding weekends) that a distributor has to action a hot MQL</inlineHelpText>
        <label>Distributor Followup Days (Hot)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Distributor_Followup_Days__c</fullName>
        <defaultValue>14</defaultValue>
        <description>The number of days (excluding weekends) that a distributor has to action a MQL</description>
        <inlineHelpText>The number of days (excluding weekends) that a distributor has to action a MQL</inlineHelpText>
        <label>Distributor Followup Days</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Distributor_Profile__c</fullName>
        <label>Distributor Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_MQL_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To disable or enable MQL for the entire ORG</description>
        <inlineHelpText>To disable or enable MQL for the entire ORG</inlineHelpText>
        <label>Is MQL Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_MSO_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting to enable or disable the MSO functionality.</description>
        <label>Is MSO Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_OCR_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To disable or enable OCR for the entire ORG</description>
        <inlineHelpText>To disable or enable OCR for the entire ORG</inlineHelpText>
        <label>Is OCR Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Is_REV_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is REV Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__OCR_Excluded_Profile_IDs__c</fullName>
        <description>List of comma separated Profile IDs that are excluded from OCR validation</description>
        <inlineHelpText>List of comma separated Profile IDs that are excluded from OCR validation</inlineHelpText>
        <label>OCR Excluded Profile IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Requalify_MQL_days__c</fullName>
        <defaultValue>14</defaultValue>
        <description>The number of days that must pass before an MQL can be re-qualified.</description>
        <label>Requalify MQL - days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Responses_After_Opp_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responses After Opp Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Round_Robin_Queue_Id__c</fullName>
        <label>Round Robin Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Time_to_include_campaign_responses__c</fullName>
        <defaultValue>24</defaultValue>
        <description>Length of time to include campaign responses in months for MQL Weight ONLY.  For opportunity attributions, this is stored on the recordtype setting.</description>
        <inlineHelpText>Length of time to include campaign responses in months</inlineHelpText>
        <label>Time to include campaign responses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marketing Enablement Global Settings</label>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>TEMarketing__Is_OCR_Enabled__c</columns>
        <columns>TEMarketing__Is_MQL_Enabled__c</columns>
        <columns>TEMarketing__Is_MSO_Enabled__c</columns>
        <columns>TEMarketing__Is_REV_Enabled__c</columns>
        <columns>TEMarketing__Distributor_Profile__c</columns>
        <columns>TEMarketing__Round_Robin_Queue_Id__c</columns>
        <columns>TEMarketing__Responses_After_Opp_Creation__c</columns>
        <columns>TEMarketing__Time_to_include_campaign_responses__c</columns>
        <columns>TEMarketing__Distributor_Followup_Days__c</columns>
        <columns>TEMarketing__Distributor_Followup_Days_Hot__c</columns>
        <columns>TEMarketing__Requalify_MQL_days__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Details_Profile</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>TEMarketing__Is_OCR_Enabled__c</columns>
        <columns>TEMarketing__Is_MQL_Enabled__c</columns>
        <columns>TEMarketing__Is_MSO_Enabled__c</columns>
        <columns>TEMarketing__Is_REV_Enabled__c</columns>
        <columns>TEMarketing__Distributor_Profile__c</columns>
        <columns>TEMarketing__Round_Robin_Queue_Id__c</columns>
        <columns>TEMarketing__Responses_After_Opp_Creation__c</columns>
        <columns>TEMarketing__Time_to_include_campaign_responses__c</columns>
        <columns>TEMarketing__Distributor_Followup_Days__c</columns>
        <columns>TEMarketing__Distributor_Followup_Days_Hot__c</columns>
        <columns>TEMarketing__Requalify_MQL_days__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SETUP_TYPE</field>
            <operation>equals</operation>
            <value>Profile</value>
        </filters>
        <label>All - Details (Profile)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Details_Users</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>TEMarketing__Is_OCR_Enabled__c</columns>
        <columns>TEMarketing__Is_MQL_Enabled__c</columns>
        <columns>TEMarketing__Is_MSO_Enabled__c</columns>
        <columns>TEMarketing__Is_REV_Enabled__c</columns>
        <columns>TEMarketing__Distributor_Profile__c</columns>
        <columns>TEMarketing__Round_Robin_Queue_Id__c</columns>
        <columns>TEMarketing__Responses_After_Opp_Creation__c</columns>
        <columns>TEMarketing__Time_to_include_campaign_responses__c</columns>
        <columns>TEMarketing__Distributor_Followup_Days__c</columns>
        <columns>TEMarketing__Distributor_Followup_Days_Hot__c</columns>
        <columns>TEMarketing__Requalify_MQL_days__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SETUP_TYPE</field>
            <operation>equals</operation>
            <value>User</value>
        </filters>
        <label>All - Details (Users)</label>
        <language>en_US</language>
    </listViews>
</CustomObject>